--- a/force-app/main/default/lwc/contactList/contactList.html
+++ b/force-app/main/default/lwc/contactList/contactList.html
@@ -9,6 +9,7 @@
   1.0   12-11-2020   i.lakshmideepak@gmail.com   Initial Version
 -->
 <template>
+  {errors}
     <lightning-datatable
                 key-field="Id"
                 data={contacts.data}
